Add scan-id integration test
